add Stat Tool (#36)
* stat tool
* fix JmlInfFlowClause
* add spotless rebasing script
* fix compile error
* fix shell tests